[project]
name = "impala-calib"
dynamic = ["version"]
description = "Bayesian model calibration"
readme = "README.md"
authors = [
    { name = "Devin Francom", email = "dfrancom@lanl.gov" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7.3",
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "seaborn>=0.13.2",
]

license = "BSD-3-Clause"
license-files = ["LICENSE"]

[build-system]
requires = ["setuptools>=68.1", "versioningit"]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
]
numba = [
    "numba>=0.62.1",
]

[tool.ruff]
line-length = 80
preview = true

[tool.ruff.lint]
extend-select = ["I"]  # W505 (doc-line-too-long); D (pydocstyle)
pydocstyle.convention = "numpy"
pycodestyle.max-doc-length = 80

# Ignore test file documentation linting.
[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["D"]
"src/**/__init__.py" = ["F", "E402"]
